--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	</script>
   </head>
 <body onload="test()">
-<h1>Hello world Ura</h1>
+<h1>Hello Yura, let's start making the frontend</h1>
 </body>
 </html>
